{
    "name": "InputActions",
    "maps": [
        {
            "name": "GamePlay",
            "id": "1a34d465-8e06-4ac1-9c7e-95b69a264696",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6dd862d5-7b06-470d-a9cf-caf2ae26010b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "cec9b076-2d85-4c84-9a11-a2142e6941f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68a4a38b-dde4-4ef8-986b-df93f991d017",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81b8ec09-186e-4208-a4dc-f1b02e89e0e3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}